--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "css": "gulp css",
     "watch": "gulp",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "build:db": "gulp compilePacks"
   },
   "browserslist": [
     "last 3 versions"
@@ -14,8 +15,19 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "gulp": "^4.0.2",
-    "gulp-less": "^4.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.15.4",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "fs": "^0.0.1-security",
+    "gulp": "^4.0.2",
+    "gulp-eslint7": "^0.3.1",
+    "gulp-if": "^3.0.0",
+    "gulp-less": "^5.0.0",
+    "merge-stream": "^2.0.0",
+    "nedb": "^1.8.0",
+    "path": "^0.12.7",
+    "through2": "^4.0.2",
+    "yargs": "^17.5.1"
+  }
 }
